# FormOps-Kit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  formops-gui.pyw  pyproject.toml
.github/workflows/: build-windows-app.yml  ci.yml  publish-release.yml
docs/: release-v0.1.0.md  release-v0.1.1.md
examples/: README.md  config.json  responses.csv
examples/affiliate-settlement-request/: config.json  responses.csv
examples/client-consultation/: config.json  responses.csv
examples/course-intake/: config.json  responses.csv
src/formops_kit/: __init__.py  cli.py  core.py  gui.py  presets.py
tests/: test_core.py
