[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formops-kit"
version = "0.1.0"
description = "Turn form responses into operation packets for small teams."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FormOps Kit maintainers"}]
keywords = ["google-forms", "automation", "operations", "productivity", "csv", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
formops = "formops_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
